latest changes on 10 june 2024

--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,18 @@
     <meta charset="utf-8" />
     <meta name="language" content="English" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/klout.ico" />
+
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="theme-color" content="#000000" />
-    
+
     <meta
       name="title"
       content="Klout Club - Find and connect with business professionals near you"
-      />
+    />
     <meta
-    name="description"
-    content="Klout Club is a business networking app that helps you find professionals - clients, investors and mentors near you. Attend business events. Join for free"
+      name="description"
+      content="Klout Club is a business networking app that helps you find professionals - clients, investors and mentors near you. Attend business events. Join for free"
     />
     <meta name="keywords" content="business, networking, industry " />
     <meta name="robots" content="index, follow" />
@@ -23,7 +24,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Klout Club</title>
+    <title>Klout Club Marketing</title>
 
     <!-- Custom fonts for this template -original -->
     <link
@@ -93,7 +94,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="%PUBLIC_URL%/home_assets/img/favicon.ico"
+      href="%PUBLIC_URL%/klout.ico"
     />
 
     <!-- Ending of CSS-->
